# optionable

./: .gitignore  Cargo.toml  deny.toml  release-plz.toml
example/k8s/: Cargo.toml  README.md  cr.yaml  deployment.yaml
example/k8s-openapi/: Cargo.toml  README.md  deployment.yaml
example/k8s-openapi/src/: lib.rs  main.rs
example/k8s/src/: lib.rs
example/orphanrule/: Cargo.toml  README.md
example/orphanrule/src/: main.rs
optionable/: CHANGELOG.md  Cargo.toml  Cargo.toml.save  README.md  build.rs  justfile
optionable/src/: chrono.rs  chrono04.rs  derive_helper.rs  jiff.rs  jiff02.rs  kube.rs  kube3.rs  kube4.rs  lib.rs  merge.rs  optionable.rs  serde_json.rs  testutil.rs
optionable/src/k8s_openapi/: README.md  codegen.sh  k8s_openapi.rs  mod.rs  version  version.md
optionable/src/k8s_openapi/v1_30/: list.rs
optionable/src/k8s_openapi/v1_30/api/admissionregistration/v1/: audit_annotation.rs  match_condition.rs  match_resources.rs  mutating_webhook_configuration.rs  named_rule_with_operations.rs  param_kind.rs  param_ref.rs  rule_with_operations.rs  service_reference.rs  validating_admission_policy.rs  validating_admission_policy_binding.rs  validating_admission_policy_binding_spec.rs  validating_admission_policy_spec.rs  validating_admission_policy_status.rs  validating_webhook_configuration.rs  validation.rs  variable.rs  webhook_client_config.rs
optionable/src/k8s_openapi/v1_30/api/admissionregistration/v1alpha1/: audit_annotation.rs  expression_warning.rs  param_kind.rs  type_checking.rs  validating_admission_policy.rs  validating_admission_policy_binding.rs  validating_admission_policy_binding_spec.rs  validating_admission_policy_spec.rs  validating_admission_policy_status.rs  validation.rs  variable.rs
optionable/src/k8s_openapi/v1_30/api/admissionregistration/v1beta1/: audit_annotation.rs  expression_warning.rs  match_condition.rs  match_resources.rs  named_rule_with_operations.rs  param_kind.rs  type_checking.rs  validating_admission_policy.rs  validating_admission_policy_binding.rs  validating_admission_policy_binding_spec.rs  validating_admission_policy_spec.rs  validation.rs  variable.rs
optionable/src/k8s_openapi/v1_30/api/apiserverinternal/v1alpha1/: server_storage_version.rs  storage_version.rs  storage_version_spec.rs  storage_version_status.rs
optionable/src/k8s_openapi/v1_30/api/apps/v1/: controller_revision.rs  daemon_set.rs  daemon_set_condition.rs  daemon_set_status.rs  daemon_set_update_strategy.rs  deployment.rs  deployment_status.rs  deployment_strategy.rs  replica_set.rs  replica_set_condition.rs  replica_set_spec.rs  replica_set_status.rs  rolling_update_stateful_set_strategy.rs  stateful_set_condition.rs  stateful_set_ordinals.rs  stateful_set_spec.rs  stateful_set_status.rs
optionable/src/k8s_openapi/v1_30/api/authentication/v1/: self_subject_review.rs  self_subject_review_status.rs  token_request_spec.rs  token_request_status.rs  token_review.rs  token_review_status.rs  user_info.rs
optionable/src/k8s_openapi/v1_30/api/authentication/v1alpha1/: self_subject_review.rs  self_subject_review_status.rs
optionable/src/k8s_openapi/v1_30/api/authentication/v1beta1/: self_subject_review.rs  self_subject_review_status.rs
optionable/src/k8s_openapi/v1_30/api/authorization/v1/: local_subject_access_review.rs  mod.rs  non_resource_attributes.rs  non_resource_rule.rs  resource_attributes.rs  self_subject_access_review.rs  self_subject_access_review_spec.rs  (+4 more)
optionable/src/k8s_openapi/v1_31/: list.rs
optionable/src/k8s_openapi/v1_32/: list.rs
optionable/src/k8s_openapi/v1_32/api/coordination/: mod.rs
optionable/src/k8s_openapi/v1_33/: list.rs
optionable/src/k8s_openapi/v1_34/: list.rs  mod.rs
optionable/src/k8s_openapi/v1_34/apimachinery/pkg/: mod.rs
optionable/src/k8s_openapi026/: README.md  codegen.sh  mod.rs  optionable.rs
optionable/src/k8s_openapi026/v1_30/api/flowcontrol/: mod.rs
optionable/src/k8s_openapi026/v1_32/: list.rs
optionable/src/k8s_openapi026/v1_33/: list.rs
optionable/src/k8s_openapi027/: README.md  codegen.sh  merge.rs  merge_test.rs  mod.rs  optionable.rs  version.md
optionable/src/k8s_openapi027/v1_31/: list.rs
optionable/src/k8s_openapi027/v1_32/: list.rs
optionable/src/k8s_openapi027/v1_33/: list.rs
optionable/src/k8s_openapi027/v1_34/: list.rs
optionable/src/k8s_openapi027/v1_35/: list.rs
optionable/src/k8s_openapi028/: README.md  codegen.sh  merge.rs  merge_test.rs  mod.rs  optionable.rs  version.md
optionable/src/k8s_openapi028/v1_32/: mod.rs
optionable/src/k8s_openapi028/v1_33/: list.rs
optionable/src/k8s_openapi028/v1_35/api/: mod.rs
optionable/tests/: alloc.rs  deepmerge.rs  kube.rs  lib.rs  merge.rs  try_merge_map.rs
optionable_codegen/: CHANGELOG.md  Cargo.toml  README.md  build.rs
optionable_codegen/example/extra_derives/: example.rs  lib.rs
optionable_codegen/example/extra_derives/address/: mod.rs
optionable_codegen/example/extra_derives/input/: example.rs
optionable_codegen/example/extra_derives/input/nested/: example.rs
optionable_codegen/example/extra_derives/output/: example.rs
optionable_codegen/example/extra_derives/output/nested/: example.rs
optionable_codegen/example/input/: Cargo.toml
optionable_codegen/example/input/nested/: example.rs
optionable_codegen/example/input/src/address/: mod.rs
optionable_codegen/example/no_convert/address/: mod.rs
optionable_codegen/example/no_convert/nested/: example.rs
optionable_codegen/example/no_convert/output/: example.rs
optionable_codegen/example/no_convert/output/nested/: example.rs
optionable_codegen/example/output/nested/: example.rs
optionable_codegen/example/simple/: lib.rs
optionable_codegen/example/simple/address/: mod.rs
optionable_codegen/example/simple/nested/: example.rs
optionable_codegen/src/: deepmerge.rs  helper.rs  k8s.rs  k8s_openapi.rs  lib.rs  map_keys_eq.rs  optionable_map_keys_eq.rs  parsed_input.rs  where_clause.rs
optionable_codegen/tests/: codegen.rs
optionable_derive/: CHANGELOG.md  Cargo.toml  README.md
optionable_derive/src/: derive.rs  lib.rs
(+7160 files in other folders)
