[workspace]
resolver = "3"
members = ["optionable", "optionable_codegen", "optionable_derive", "optionable_codegen/bin", "example/k8s"]

[patch.crates-io]
optionable = { path = "optionable" }
optionable_derive = { path = "optionable_derive" }
optionable_codegen = { path = "optionable_codegen" }

# see https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true
codegen-units = 1
