[workspace]
resolver = "3"
members = ["optionable", "optionable_codegen", "optionable_derive", "optionable_codegen/bin"]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
repository = "https://github.com/ngergs/optionable"
license = "MIT OR Apache-2.0"

# see https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true
codegen-units = 1

[patch.crates-io]
optionable = { path = "optionable" }
optionable_derive = { path = "optionable_derive" }
optionable_codegen = { path = "optionable_codegen" }
