[package]
name = "optionable_codegen"
version = "0.5.0"
edition = "2024"
description = "proc_macro2 functions for the derive macro and codegen implementations in the `optionable_derive` crate to derive nested structs/enums with all subfields being optional (e.g. for patches or Kubernetes server side apply)."
repository = "https://github.com/ngergs/optionable"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = []

[lints.clippy]
pedantic = "warn"

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.106", default-features = false, features = ["proc-macro", "derive", "visit"] }
proc-macro2 = "1.0.101"
darling = { version = "0.21.3", default-features = false }
itertools = "0.14.0"
