[package]
name = "optionable_derive"
version = "0.2.1"
edition = "2024"
description = "Derive macro to derive nested structs/enums with all subfields being optional (e.g. for patches or Kubernetes server side apply)."
repository = "https://github.com/ngergs/optionable"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = []
k8s_openapi = ["optionable_codegen/k8s_openapi"]
kube = ["optionable_codegen/kube", "dep:proc-macro2", "dep:quote"]

[lints.clippy]
pedantic = "warn"

[lib]
proc-macro = true

[dependencies]
optionable_codegen = "0.5.0"
syn = { version = "2.0.106", default-features = false }
proc-macro2 = { version = "1.0.103", default-features = false, optional = true }
quote = { version = "1.0.42", default-features = false, optional = true }

[package.metadata.docs.rs]
# to be able to document feature dependent settings, see https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577/3
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
