[package]
name = "optionable_derive"
version = "0.10.0"
description = "Derive macro to derive nested structs/enums with all subfields being optional (e.g. for patches or Kubernetes server side apply)."
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
k8s_openapi = ["optionable_codegen/k8s_openapi"]
kube = ["optionable_codegen/kube", "dep:kube-derive", "dep:proc-macro2", "dep:quote"]

[lints.clippy]
pedantic = "warn"

[lib]
proc-macro = true

[dependencies]
optionable_codegen = "0.12.1"
syn = { version = "2.0.114", default-features = false }
kube-derive = { version = "3.0.0", default-features = false, optional = true }
proc-macro2 = { version = "1.0.105", default-features = false, optional = true }
quote = { version = "1.0.43", default-features = false, optional = true }


[package.metadata.docs.rs]
# to be able to document feature dependent settings, see https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577/3
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
