[package]
name = "optionable_k8s_openapi_example"
version = "0.1.0"
edition = "2024"
description = "Example for how to use the optioned types for k8s-openapi"
publish = false

[lints.clippy]
pedantic = "warn"

[dependencies]
kube = "2.0.1"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
optionable = { version = "0.2.6", features = ["k8s_openapi_v1_34"] }
