[package]
name = "optionable_k8s_example"
version = "0.1.0"
description = "Example for how to use the optioned types for k8s-openapi and kube"
readme = "README.md"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.clippy]
pedantic = "warn"

[dependencies]
k8s-openapi = { version = "0.27.0", features = ["v1_35"] }
optionable = { version = "0.12.0", features = ["kube", "k8s_openapi027_v1_35"] }
kube = { version = "3.0.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
schemars = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde-saphyr = "0.0.11"
