[package]
name = "optionable_k8s_openapi_example"
version = "0.1.0"
description = "Example for how to use the optioned types for k8s-openapi"
readme = "README.md"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.clippy]
pedantic = "warn"

[dependencies]
k8s-openapi = { version = "0.26.1", features = ["v1_34"] }
optionable = { version = "0.10.0", features = ["kube", "k8s_openapi_v1_34"] }
kube = { version = "2.0.1", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
schemars = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde-saphyr = "0.0.10"
