[package]
name = "optionable_k8s_example"
version = "0.1.0"
description = "Example for how to use the optioned types for k8s-openapi and kube"
readme = "README.md"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.clippy]
pedantic = "warn"

[dependencies]
k8s-openapi = { version = "0.28.0", features = ["v1_36"] }
optionable = { version = "0.17.0", features = ["kube4", "k8s_openapi028_v1_36"] }
kube = { version = "4.0.0", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.150"
serde-saphyr = "0.0.27"
autodefault = "2.0.0"
