[package]
name = "optionable_orphanrule"
version = "0.1.0"
description = "Illustrates how to circumvent the orphanrule for some use cases"
readme = "README.md"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.clippy]
pedantic = "warn"

[dependencies]
optionable = { version = "0.12.1", default-features = false, features = ["derive"] }
serde_json = "1.0.149"
